--- a/cliente/postFile.htm
+++ b/cliente/postFile.htm
@@ -17,7 +17,9 @@
 </head>
 
 <body>
-    <input type="file" id='inpFile' />
+    <input type="file" id='inpFile' /><br>
+    <textarea id='textArea' id="" cols="70" rows="15"></textarea>
+    <input id='button' type="button"  value="Enviar">
     <pre id='pre'></pre>
 </body>
 
