--- a/postFile.html
+++ b/postFile.html
@@ -19,11 +19,7 @@
   "consulta": {
     "UltPeriodoOffset": 2,
     "NumPeriodos": 10,
-    "TipoPeriodos": 3,
-    "Offset": {
-      "TipoPeriodos": 8,
-      "NumPeriodos": 1
-    }
+    "TipoPeriodos": 3
   },
   "filtros": {
     "receptor": {
