--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- 1. Load libraries -->
     <!-- Polyfill for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
-    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/zone.js/dist/zone.js?main=browser"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="jspm_packages/system.js"></script>
     <!-- 2. Configure SystemJS -->
