--- a/postFile.html
+++ b/postFile.html
@@ -39,6 +39,9 @@
       },
       "1": {
           "campo": "ventasNetas"
+      },
+      "2": {
+          "receptor": "comunas"
       }
   }
 }]    
