Consulta a DTEs ok

--- a/postFile.html
+++ b/postFile.html
@@ -22,14 +22,7 @@
   "consulta": {
     "UltPeriodoOffset": -1,
     "NumPeriodos": 12,
-    "TipoPeriodos": 3,
-    "campos": {
-        "ventasNetas": true,
-        "ventasBrutas": true,
-        "cantDocs": false,
-        "cantClientes": true,
-        "cantProductos": true
-     }
+    "TipoPeriodos": 3
   },
   "filtros": {
   },
@@ -38,7 +31,7 @@
           "periodo": "periodo"
       },
       "1": {
-          "campo": "ventasNetas"
+          "campo": 2
       },
       "2": {
           "receptor": "comunas"
