--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Angular QuickStart</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 <!-- 3. Display the application -->
 
